--- a/iberdrola/src/components/TrackListRoute/TrackListPage.css
+++ b/iberdrola/src/components/TrackListRoute/TrackListPage.css
@@ -7,8 +7,15 @@
   margin-bottom: 30px;
 }
 
+.trackListPage-noOverflow {
+  white-space: nowrap; 
+  width: 200px; 
+  overflow: hidden;
+  text-overflow: ellipsis; 
+}
+
 .trackListPage-trackInfo {
-  max-width: 300px;
+  width: 200px;
   margin-left: 20px;
 }
 
